# revealui

./: .commit-msg.txt  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.backup  .env.clean  .env.example  .env.production.example  .env.template  .env.test  .envrc  .gitattributes  .gitignore  .gitleaks.baseline.json  .gitleaks.toml  .gitleaksignore  .lighthouserc.json  .mcp.json  .migration-baseline.md  .migration-commit-message.md  .migration-complete.md  .npmrc  .prettierignore  .size-limit.json  .syncpackrc.json  .vercelignore  .vscode-recommended.json  .zedignore  7_DAY_EXECUTION_PLAN.md  AGENCY_DASHBOARD_PLAN.md  AGENT-HANDOFF.md  AGENTS.md  AI_CODE_VALIDATOR_README.md  APP_TEST_FIXES_SUMMARY.md  AUDIT-IMPLEMENTATION-COMPLETE.txt  BUILD_FIX_SUMMARY.md  CACHING_QUICK_START.md  CHANGELOG.md  CICD_IMPLEMENTATION_SUMMARY.md  (+118 more)
.changeset/: README.md  ai-a2a-orchestration-runtime-subpaths.md  ai-inference-snaps-default-url.md  ai-llm-orchestration-subpaths.md  ai-x402-a2a-pending-payment.md  api-extract-tier-limits.md  api-invoice-payment-action-required.md  api-payment-intent-requires-action.md  api-seat-count-guard.md  api-stripe-customer-race.md  config.json  contracts-drop-dead-agent-memory.md  contracts-drop-session-vestige.md  contracts-hoist-database-generic.md  contracts-x402-pending-payment-state.md  core-api-monitoring-subpaths.md  core-cache-query-cache-db-pool.md  core-create-read-after-write.md  core-instance-create-override-access.md  core-x402-observability-metrics.md  db-supabase-url-required.md  deploy-rollback-actually-rolls-back.md  docs-small-hotspots-drift.md  escape-sql-identifier.md  fix-cli-peer-dep.md  fix-mcp-engines.md  fix-services-engines.md  initial-auth-release.md  initial-cli-release.md  initial-config-release.md  initial-contracts-release.md  initial-core-release.md  initial-db-release.md  initial-presentation-release.md  initial-release.md  initial-router-release.md  initial-setup-release.md  initial-sync-release.md  initial-utils-release.md  license-grace-periods.md  (+40 more)
.claude/: CLAUDE.md  COORDINATION.md  SESSION_2026-02-05.md  agent-state.md
.cursor/: ENVIRONMENT_SETUP.md  README.md  cleanup-schedule.json  cohesion-analysis.json  config.json  cursor-env-fix.md  env-setup.md  environment.json  mcp-config.json  mcp.json  rules.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  (+4 more)
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/.cargo/: audit.toml
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/src/: config.rs  harness.rs  harness_watcher.rs  inference.rs  lib.rs  local_shell.rs  main.rs  spawner.rs  ssh.rs  state.rs  tray.rs
apps/studio/src-tauri/src/commands/: agent.rs  apps.rs  config.rs  error.rs  git.rs  harness.rs  inference.rs  launcher.rs  local_shell.rs  mod.rs  mount.rs  setup.rs  spawner.rs  ssh.rs  status.rs  sync.rs  terminal.rs  tunnel.rs  vault.rs
apps/studio/src-tauri/src/commands/deploy/: database.rs  email.rs  health.rs  mod.rs  secrets.rs  stripe.rs  vercel.rs
apps/studio/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  trait_defs.rs  windows.rs
(+4399 files in other folders)
