[package]
name = "revealui-studio"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joshua Vaughn <joshua.v.dev@gmail.com>"]
description = "RevealUI Studio — Tauri desktop companion for the portable dev environment"

[lib]
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revealui-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
