[package]
name = "revealui-studio"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RevealUI Studio <founder@revealui.com>"]
description = "RevealUI Studio — Tauri desktop companion for the portable dev environment"

[lib]
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revealui-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
revvault-core = { git = "https://github.com/RevealUIStudio/revault.git", package = "revvault-core" }
age = { version = "0.11", features = ["armor"] }
secrecy = "0.10"
dirs = "6"
arboard = "3"
russh = "0.46"
russh-keys = "0.46"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
async-trait = "0.1"
