[package]
name = "revealui-studio"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RevealUI-Commercial"
authors = ["RevealUI Studio <noreply@revealui.com>"]
description = "RevealUI Studio — native AI experience: agent coordination hub, local inference management"

[lib]
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revealui-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
revvault-core = { git = "https://github.com/RevealUIStudio/revault.git", package = "revvault-core" }
age = { version = "0.11", features = ["armor"] }
secrecy = "0.10"
dirs = "6"
which = "7"
arboard = "3"
russh = "0.58"
tokio = { version = "1", features = ["sync", "net", "io-util"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
portable-pty = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
rand = "0.9"
hex = "0.4"
rsa = { version = "0.9", features = ["pem"] }
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
git2 = "0.20"
similar = "2"
dissimilar = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
